# python-api-automation-framework

./: .gitignore  Dockerfile  README.md  commands.md  globals.py  manifest.toml  playground.py  poetry_cheatsheet.md  pyproject.toml  pytest.ini
.github/workflows/: api.yml
config/: config_reader.py  qa.toml
envs/qa/: endpoints.toml
scripts/: execute_test.sh
scripts/execution/: execute_in_github_actions.sh  execute_in_local.sh  execute_in_pipeline.sh
scripts/util-scripts/: clear-reports.sh  discord-notification.sh  generate-allure-report.sh  slack-notification.sh
src/actions/: actions.py  user_actions.py
src/clients/: user_client.py
src/models/envs_models/: config_models.py  endpoints_models.py
src/models/request_models/: create_user_request_model.py
src/models/response_models/: create_user_response_model.py
src/models/utils_models/: response_model.py
src/utils/: base_client.py  config_parser.py  file_dir_operations.py  json_parser.py  logger.py  random_data_generator.py  remove_python_cache_files.py  request_payload_generator.py  test_summary_extractor.py  toml_operations.py
src/utils/decorators/: meta_data_decorator.py
tests/: conftest.py  create_user_test.py  fixtures.py  user_service_test.py  user_test.py
tests/data/assert_messages/: user_service.py
